# ciot_test

./: CMakeLists.txt  ciot_custom_config.h  main.c
